# vectorscan

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
src/: bindings.rs
